<resources>
    <string name="app_name">Civilizations</string>
    <string name="title_civilizations">Civilizations</string>
    <string name="title_info">About</string>
    <string name="title_search">Search</string>
    <string name="civilization_list_item_title">Aztecs</string>
    <string name="civilization_list_item_expansion">Expansion</string>
    <string name="civilization_list_item_army_type">Army type</string>
    <string name="civilization_name">Civilization</string>
    <string name="civilization_army_type">Army type</string>
    <string name="expansion">Expansion</string>
    <string name="show_collection">show collection</string>
    <string name="delete_all">Delete All</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">settings</string>
    <string name="aoe2_civilizations">AOE2 civilizations</string>
    <string name="civilization_own">Create own civilization</string>
    <string name="my_own">Created civilizations</string>
    <string name="aoe2_fan_wiki">AOE2 Fan wiki</string>
    <string name="wiki_text">This app is made for every AOE2 fan out there, the civilizations of the game are displayed in the search section, furthermore, you have the possibility to create your own civilization</string>
    <string name="log_in">Log in</string>
    <string name="add_to_collection">ADD TO COLLECTION</string>
    <string name="my_civilizations">My civilizations</string>
    <string name="delete">delete</string>
    <string name="add">add</string>

</resources>