<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_green">

    <TextView
        android:id="@+id/tv_civilization_name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/civilization_list_item_title" />
    <TextView
        android:id="@+id/tv_civilization_expansion"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/civilization_list_item_expansion" />
    <TextView
        android:id="@+id/tv_army_type"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/civilization_list_item_army_type" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_forum" />
</LinearLayout>