<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_civilizations">

    <fragment
        android:id="@+id/navigation_civilizations"
        android:name="com.example.civilization_app.uis.fragments.CivilizationsFragment"
        android:label="@string/title_civilizations"
        tools:layout="@layout/fragment_civilizations" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.civilization_app.uis.fragments.AboutFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="com.example.civilization_app.uis.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment android:id="@+id/placeholder" >
        <action
            android:id="@+id/action_placeholder_to_navigation_civilizations"
            app:destination="@id/navigation_civilizations" />
        <action
            android:id="@+id/action_placeholder_to_navigation_share"
            app:destination="@id/navigation_share" />
        <action
            android:id="@+id/action_placeholder_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>
</navigation>